<resources>
    <string name="app_name">ShoeStore</string>
    <string name="password_hint">Password...</string>
    <string name="email_hint">Email...</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="detail">Detail</string>
    <string name="welcome">Welcome</string>
    <string name="shoes">Shoes</string>
    <string name="hi">Hi!</string>
    <string name="welcome_text">This application will help you manage your inventory!</string>
    <string name="new_account">New Account</string>
    <string name="instructions1">Adding shoes to your inventory is easy!\nThey will magically appear
        in the list for you when opening the application.</string>
    <string name="instructions2">To see additional detail on the shoe of your choice, simply select
        it and press on the Detail button.\n\nThat\'s it, you are now a pro with this tool and ready
        to use it!</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="logout">Logout</string>
</resources>
